--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>[NAME]</title>
+    <title>Allan End-Sem</End-Sem></title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" href="image/logo.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -23,8 +23,8 @@
 <body>
     <div class="top-container">
         <img class="top-cloud" src="image/cloud.png" width="15%" alt="cloud-pic">
-        <h1>I'm [FIRST NAME]</h1>
-        <p style="font-size: 20px;">a <span style="text-decoration: overline;"></span>[CAREER]</p>
+        <h1>I'm Allan</h1>
+        <p style="font-size: 20px;">a <span style="text-decoration: overline;"></span>Web Developer</p>
         <img src="image/mountain.png" alt="mountain-pic"> <br>
         <img class="bottom-cloud" src="image/cloud.png" width="15%" alt="cloud-pic">
     </div>
@@ -32,10 +32,10 @@
         <div class="profile">
             <img src="image/profile-pic.png" width="250" height="250" alt="My profile picture">
             <h2>Hello there!</h2>
-            <p class="intro">I'm [AGE] years old. I'm studying [PROGRAM] at <a class="uni"
+            <p class="intro">I'm 24 years old. I'm studying a Bachelors of Science in Software Engineering at <a class="uni"
                     href="https://www.bugemauniv.ac.ug">University
-                </a>. My dream work is to become a [CAREER-1] and
-                [CAREER-2]. I love [HOBBY-1], [HOBBY-2], [HOBBY-3] and [HOBBY-4].</p>
+                </a>. My dream work is to become a MERN Stack Developer and
+                Web Frontend Debugger. I love History, Football, Technology and Swimming.</p>
             <p class="intro">Nice to meet you!</p>
         </div>
         <hr>
@@ -43,19 +43,14 @@
             <h2>Skills</h2>
             <div class="skill-row">
                 <img class="code-image" src="image/web-programming.png" alt="dev-pic">
-                <h3>[SKILL-1] E.G ==> [Design & Development]</h3>
-                <p>[SKILL DESCRIPTION] E.G ==> I started learning to code when I was 15 years old because I want to make my own games and my own
-                    website. Overtime, I have gained a wealth of experience designing and developing web applications
-                    and some small games.
+                <h3>Backend Development</h3>
+                <p>I started learning how to code back in 2020 that time when the entire universe was experiencing a COVID-19 wave. As I had nothing to do, I decided to look out for something challenging so I discussed with a dveloper who gave me a book on backend development with Java.
                 </p>
             </div>
             <div class="skill-row">
                 <img class="success-image" src="image/success.png" alt="success-pic">
-                <h3>[SKILL-2] E.G ==> Winning Prize</h3>
-                <p>[SKILL DESCRIPTION] E.G ==> I got a bronze medal at the final round of IOE (English) when I was grade 5. I have took part two
-                    times IT competition
-                    at city level and won two "1st prize", two "2nd prize". Once
-                    my project was choosen to be attended at country final round. </p>
+                <h3>Frontend Development</h3>
+                <p>Java became a little complicated to me as a beginner and one evening, a Frontend Developer told me that I had started on a wrong note. He gave me youtube links on where I had to start from hence I entered the world of Front End Web Development. I learnt HTML, CSS, Javascripts. Of recent, I decided to dive deeper into Javascripts hence started on a Library known as React JS. My research showed me that it is the most popular library under javascript, actually beating even some of the frameworks there like Vue.js.  </p>
             </div>
         </div>
         <hr>
@@ -64,14 +59,14 @@
             <h3>My biggest love is to be your friend</h3>
             <p>Deep friendships like these offer solace during hard times and laugh till your face hurts happiness other
                 times.</p>
-            <a class="btn" href="mailto:[YOUR EMAIL]">CONTACT ME</a>
+            <a class="btn" href="mailto: ndaulachris@gmail.com">CONTACT ME</a>
         </div>
     </div>
     <div class="bottom-container">
         <a class="footer-link" href="[YOUR LINKEDIN URL]">LinkedIn</a>
-        <a class="footer-link" href="[YOUR GITHUB PROFILE URL]">GitHub</a>
-        <a class="footer-link" href="[YOUR FACEBOOK PROFILE URL]">Facebook</a>
-        <p>©2021 Created by [YOUR NAME]</p>
+        <a class="footer-link" href="https://github.com/Nalukoola">GitHub</a>
+        <a class="footer-link" href="https://www.facebook.com/profile.php?id=100082090365812">Facebook</a>
+        <p>©2022 Created by Nalukoola Allan Ndaula</p>
     </div>
 
 </body>
